# advantageous_view

./: .gitignore  Dockerfile  Makefile  docker-compose.yml  pyproject.toml  requirements.txt
src/: dependencies.py  main.py  settings.py
src/api/favorites/: router.py  schemas.py
src/api/feedbacks/: router.py  schemas.py
src/api/preferences/: router.py  schemas.py
src/api/price_tracking/: router.py  schemas.py
src/api/search/: router.py  schemas.py
src/api/search_history/: router.py  schemas.py
src/api/users/: router.py  schemas.py
src/core/favorites/: entities.py  exceptions.py  services.py
src/core/feedbacks/: entities.py  exceptions.py  services.py
src/core/preferences/: entities.py  services.py
src/core/price_tracking/: checker.py  entities.py  exceptions.py  service.py
src/core/search/: entities.py  ranker.py  services.py
src/core/search_history/: entities.py  services.py
src/core/users/: entities.py  exceptions.py  services.py
src/infrastructure/celery_app/: app.py  tasks.py
src/infrastructure/database/: database.py  uow.py
src/infrastructure/database/models/: favorites.py  feedbacks.py  preferences.py  price_tracking.py  search_history.py  users.py
src/infrastructure/database/repositories/: favorites.py  (+5 more)
src/infrastructure/email/: service.py
src/infrastructure/marketplaces/: wb.py  ym.py
src/migrations/: env.py
src/migrations/versions/: 0001_create_user_model.py  0002_add_preferences_model.py  0003_add_search_history_model.py  0004_create_favorite_model.py  0005_create_price_tracking_models.py  0006_create_feedback_model.py
